--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -35,5 +35,5 @@
 
 .post-meta{
     font-size: $small-font-size;
-    color: $grey-color;
+    color: var(--site-grey-color, $grey-color);
 }
